--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class='terminal'>
         <div class='content'>
             <p class='command'>I'm Not Hacker [V 1.0]
-                (c) NAR. Tüm hakları saklıdır.</p><br>
+                (c) NAR.</p><br>
             <div class='messages'></div><br>
             <table>
             <tr>
