--- a/index.html
+++ b/index.html
@@ -13,36 +13,32 @@
     <meta name="revisit-after" content="1 days" />
     <!-- Link -->
     <link rel="shortcut icon" type="image/png" href="https://img.icons8.com/?size=80&id=WbRVMGxHh74X&format=png" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
     <!-- Script -->
-    <script>
-        function getParameterByName(name, url) {
-            if (!url) url = window.location.href;
-            name = name.replace(/[\[\]]/g, "\\$&");
-            var regex = new RegExp("[?&]" + name + "(=([^&#]*)|&|#|$)"),
-                results = regex.exec(url);
-            if (!results) return null;
-            if (!results[2]) return "";
-            return decodeURIComponent(results[2].replace(/\+/g, " "));
-        }
-    </script>
-    <script src="main.js"></script>
+    <script src="assets/js/main.js"></script>
+    <script src="assets/scripts/math.js"></script>
 </head>
 <body>
     <div class="terminal">
         <div class="content">
-            <p class="command">I'm Not Hacker [V 2.3] (c) NAR.</p>
+            <div class="pin">I'm Not Hacker [V 2.4] (c) NAR.</div>
             <div class="messages"></div>
             <br />
+            <textarea id="editArea">editArea</textarea>
             <table>
                 <tr>
-                    <td><span id="path" style="cursor: default;">user@localhost:~$ </span></td>
-                    <td width="100%"><input id="commandInput" type="text" class="input-box"/></td>
+                    <td><span id="path" style="cursor: default;">limit@newUser:~$ </span></td>
+                    <td width="100%">
+                        <input id="commandInput" type="text" class="input-box"/>
+                    </td>
                 </tr>
             </table>
+            <a href="#end" id="end"></a>
         </div>
     </div>
+    <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-database.js"></script>
 </body>
-<script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-auth.js"></script>
-<script src="script.js"></script>
+<script src="assets/js/script.js"></script>
+<script id="initialize"></script>
