--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="pin">I'm Not Hacker [V 2.4] (c) NAR.</div>
             <div class="messages"></div>
             <br />
-            <textarea id="editArea">editArea</textarea>
+            <textarea id="editArea"></textarea>
             <table>
                 <tr>
                     <td><span id="path" style="cursor: default;">limit@newUser:~$ </span></td>
