--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="robots" content="index,follow" />
     <meta name="revisit-after" content="1 days" />
     <!-- Link -->
-    <link rel="shortcut icon" type="image/png" href="https://img.icons8.com/?size=80&id=WbRVMGxHh74X&format=png" />
+    <link rel="shortcut icon" type="image/png" href="https://devnar.github.io/logos/inh-alt.png" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <!-- Script -->
     <script src="assets/js/main.js"></script>
