--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <meta name="theme-color" content="#23b5b5" />
     <meta property="og:title" content="I'm Not Hacker" />
     <meta property="og:description" content="It is an open source terminal site made by Nar." />
-    <meta property="og:image" content="tikle.png" />
+    <meta property="og:image" content="https://devnar.github.io/logos/inh-white.png" />
     <!-- /robots -->
     <meta name="robots" content="index,follow" />
     <meta name="revisit-after" content="1 days" />
     <!-- Link -->
-    <link rel="shortcut icon" type="image/png" href="https://devnar.github.io/logos/inh-alt.png" />
+    <link rel="shortcut icon" type="image/png" href="https://devnar.github.io/logos/inh-white.png" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <!-- Script -->
     <script src="assets/js/main.js"></script>
