--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <meta name="theme-color" content="#23b5b5" />
     <meta property="og:title" content="I'm Not Hacker" />
     <meta property="og:description" content="It is an open source terminal site." />
-    <meta property="og:image" content="https://devnar.github.io/logos/inh.png" />
+    <meta property="og:image" content="https://devnar.github.io/logos/inh-icon.png" />
     <!-- /robots -->
     <meta name="robots" content="index,follow" />
     <meta name="revisit-after" content="1 days" />
     <!-- Link -->
-    <link rel="shortcut icon" type="image/png" href="https://devnar.github.io/logos/inh.png" />
+    <link rel="shortcut icon" type="image/png" href="https://devnar.github.io/logos/inh-icon.png" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <!-- Script -->
     <script src="assets/js/main.js"></script>
