--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="assets/css/style.css" />
     <!-- Script -->
     <script src="assets/js/main.js"></script>
+    <script src="assets/scripts/dm.js"></script>
 </head>
 <body>
     <div class="terminal">
