--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="messages"></div><br>
             <div class="input-container">
                 <span id="path" class="prompt">limit@newUser:~$</span>
-                <input id="commandInput" type="text" class="input-box" />
+                <input id="commandInput" type="text" class="input-box" autocapitalize="none" />
             </div>
             <a href="#end" id="end"></a>
         </div>
