--- a/index.html
+++ b/index.html
@@ -34,4 +34,5 @@
 </body>
 <script src="assets/js/app.js"></script>
 <script id="initialize"></script>
+<script async="" src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
 </html>
