--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head id="scriptAdd">
+<head>
     <title>I'm Not Hacker Terminal</title>
     <!-- Meta -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
@@ -22,7 +22,7 @@
 <body>
     <div class="terminal">
         <div class="content">
-            <div class="pin">I'm Not Hacker [V 3.0] (c) NAR.</div>
+            <div class="pin">I'm Not Hacker [V 3.1] (c) NAR.</div>
             <div class="messages"></div><br>
             <div class="input-container">
                 <span id="path" class="prompt">limit@newUser:~$</span>
@@ -33,6 +33,5 @@
     </div>
 </body>
 <script src="assets/js/app.js"></script>
-<script id="initialize"></script>
 <script async="" src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
 </html>
